classDiagram
  %% top -- auto-generated by MermaidMain, do not edit

  class Attribute {
    <<trait>>
    +def toInt Int
  }
  class Card {
    -val color Color
    -val number Number
    -val shading Shading
    -val shape Shape
  }
  class Color {
    <<abstract>>
    -val toInt Int
  }
  class Natural {
    <<trait>>
    +def add(n:Natural) Natural
    +def next Natural
    -def multiply(n:Natural) Natural
    -def subtract(n:Natural) Option~Natural~
  }
  class Number {
    <<abstract>>
    -val toInt Int
  }
  class Quantity {
    -def *~..~ _
    -def +(other:Quantity~D~) Option~Quantity~D~~
    -def /~..~ _
    -def in(targetUnit:PhysicalUnit~D~) Option~Quantity~D~~
    -val inverted Quantity~DivDim~Dimensionless,D~~
    -val render String
    -val renderLaTeX String
    -val squared Quantity~MulDim~D,D~~
    -val unit Unit~D~
    -val value Valuable
  }
  class QuantityException {
    -val message String
  }
  class RomanParser {
    -def decodeRepeated(x:String,identity:Natural,value:Natural) Natural
    -def parseRoman(w:String) Option~Natural~
    -val hundreds Parser~Natural~
    -val romanNumeral Parser~Natural~
    -val tens Parser~Natural~
    -val thousands Parser~Natural~
    -val units Parser~Natural~
  }
  class Set {
    -def attributesMatch(f:Function1~Card,Int~) Boolean
    -val cards Seq~Card~
    -val color Function1~Card,Int~
    -val isSet Boolean
    -val number Function1~Card,Int~
    -val shading Function1~Card,Int~
    -val shape Function1~Card,Int~
  }
  class SetGame {
    -def dozen Seq~Card~
    -def sets(cards:Seq~Card~) Seq~Set~
    -val fullDeck Seq~Card~
    -val random Random
  }
  class Shading {
    <<abstract>>
    -val toInt Int
  }
  class Shape {
    <<abstract>>
    -val toInt Int
  }
  class Successor {
    -def add(n:Natural) Natural
    -def next Natural
    -val natural Natural
  }
  class exampleMainProgram
  class main
  %% cross-module parents
  class Renderable {
    <<trait>>
  }

  Attribute <|-- Color
  Attribute <|-- Number
  Renderable <|-- Quantity
  Attribute <|-- Shading
  Attribute <|-- Shape
  Natural <|-- Successor
